# firmware

./: CHANGELOG.md  JETSON_DEPLOYMENT_GUIDE.md  LICENSE  PROFESSIONAL_CODE_IMPROVEMENTS.md  PS4_JOYSTICK_GUIDE.md  README.md  README_old.md  deploy_to_jetson.sh  platformio.ini  test_hardware_system.py
docs/: API_REFERENCE.md  TROUBLESHOOTING.md
ros2_workspace/: README.md  jetson_setup.sh  setup_ps4_controller.py
ros2_workspace/install/: local_setup.sh  setup.sh
ros2_workspace/install/ackermann_robot/lib/ackermann_robot/: hardware_interface  kinematics_node
ros2_workspace/install/ackermann_robot/share/ackermann_robot/: package.dsv  package.ps1  package.sh  package.xml
ros2_workspace/install/ackermann_robot/share/ackermann_robot/config/: hardware_params.yaml  robot_params.yaml
ros2_workspace/install/ackermann_robot/share/ackermann_robot/launch/: ackermann_robot.launch.py  (+3 more)
ros2_workspace/log/: latest_build
ros2_workspace/src/ackermann_robot/: package.xml  setup.py
ros2_workspace/src/ackermann_robot/ackermann_robot/: hardware_interface.py  kinematics_node.py  motor_driver.py  simulation_node.py  visualization_node.py
ros2_workspace/src/ackermann_robot/config/: hardware_params.yaml  ps4_joy_config.yaml  robot_params.yaml
ros2_workspace/src/ackermann_robot/launch/: ackermann_robot_hardware.launch.py  ackermann_robot_hardware_old.launch.py  ackermann_robot_with_viz.launch.py
ros2_workspace/src/ackermann_robot/resource/: ackermann_robot
src/: main.cpp
tools/: microros_bridge.py  microros_bridge_old.py  speed_logger.py
tools/config/: bridge_config.json
