<?xml version="1.0"?>
<package format="3">
  <name>ackermann_robot</name>
  <version>1.0.0</version>
  <description>Four-wheel independent drive Ackermann robot with dual steering disks</description>
  
  <maintainer email="dev@example.com">Robot Developer</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>python3-matplotlib</depend>
  <depend>python3-numpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>